--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clean": "rimraf lib types",
     "build": "tsc && yarn copy-templates",
     "copy-templates": "copyfiles -u 3 \"./src/commands/create/templates/**/*\" \"./lib/commands/create/\"",
+    "lint": "eslint \"src\"",
     "register:local": "yarn global add file:$PWD",
     "dev": "yarn clean && yarn build && yarn register:local"
   },
@@ -26,6 +27,7 @@
     "copyfiles": "^2.4.1",
     "eslint": "^8.38.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^5.0.1",
