--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "dev": "yarn clean && yarn build && yarn register:local"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@semantic-release/git": "^10.0.1",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^18.15.11",
     "@types/prompts": "^2.4.9",
     "@types/randomstring": "^1.1.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
-    "copyfiles": "^2.4.1",
     "eslint": "^8.38.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
@@ -33,18 +35,21 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "fs-extra": "^11.1.1",
+    "husky": "^8.0.3",
     "prettier": "^3.1.0",
-    "prompts": "^2.4.2",
-    "rimraf": "^5.0.0",
+    "semantic-release": "^21.0.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
     "chalk": "^5.3.0",
+    "copyfiles": "^2.4.1",
     "flat": "^6.0.1",
+    "fs-extra": "^11.1.1",
     "pino": "^8.16.2",
     "pino-pretty": "^10.2.3",
-    "randomstring": "^1.3.0"
+    "prompts": "^2.4.2",
+    "randomstring": "^1.3.0",
+    "rimraf": "^5.0.0"
   },
   "bin": {
     "adminjs": "./lib/cli.js"
